# DEMO_RAG

./: README.md  main.py  pyproject.toml  r.py  run.py
config/: config.yaml
src/: gradio_ui.py  prompts.py  retrieval.py  utils.py
